--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.68",
     "@vitejs/plugin-vue": "^3.1.2",
